modify createion response to return the ID of the new item
